<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_menu_favourites"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_menu_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/title_profile" />

</menu>
